# GemBrowser

./: .gitignore  CMakeLists.txt  COPYING  README.md
src/Desktop/: CMakeLists.txt  gembrowser.cpp  gembrowser.h  gembrowser.ui  gemwidget.cpp  gemwidget.h  main.cpp  prefsdialog.cpp  prefsdialog.h  prefsdialog.ui
src/core/: CMakeLists.txt  configfile.cpp  configfile.h  geminiparser.cpp  geminiparser.h  geminiprotocol.cpp  geminiprotocol.h  historyclass.cpp  historyclass.h  toolkitclass.cpp  toolkitclass.h
tests/: CMakeLists.txt
tests/core/: tst_configfile.cpp  tst_historyclass.cpp
